--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,21 +2,21 @@ name: Build go package
 on: 
   push:
     branches:   
-     -'release/v*' 
+     - 'release/v*' 
 jobs:
   build_go_bear:
     runs-on: ubuntu-latest
 
 steps:
--name: setup go 
- - uses: actions/setup-go@v4
+- name: setup go 
+  uses: actions/setup-go@v4
     with:
       go-version: '^1.13.1' 
--name: checkout your source
+- name: checkout your source
   uses: actions/checkout@v3
--name: build app
+- name: build app
   run: dotnet build 
--name: run go
+- name: run go
   run: go version
 # -name: link Railway
 #   run: 
