--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,9 +9,11 @@ jobs:
 
 steps:
 - name: setup go 
-  uses: actions/setup-go@v4
+   - uses: actions/setup-go@v4
     with:
-      go-version: '^1.13.1' 
+      go-version: '1.14'
+      check-latest: true
+  - run: go run hello.go
 - name: checkout your source
   uses: actions/checkout@v3
 - name: build app
