--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,13 +10,13 @@ jobs:
 steps:
 - name: checkout your source
   uses: actions/checkout@v3
-  
-- name: setup go 
-   - uses: actions/setup-go@v4
-    with:
-      go-version: '1.14'
-      check-latest: true
-  - run: go run hello.go
+
+# - name: setup go 
+#    - uses: actions/setup-go@v4
+#     with:
+#       go-version: '1.14'
+#       check-latest: true
+#   - run: go run hello.go
 
 - name: build app
   run: dotnet build 
