--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,23 +5,22 @@ on:
      - 'release/v*' 
 jobs:
   build_go_bear:
+    name: CA for CICD
     runs-on: ubuntu-latest
 
-steps:
-- name: checkout your source
-  uses: actions/checkout@v3
+    steps:
+    - name: checkout your source
+      uses: actions/checkout@v3
 
-# - name: setup go 
-#    - uses: actions/setup-go@v4
-#     with:
-#       go-version: '1.14'
-#       check-latest: true
-#   - run: go run hello.go
-
-- name: build app
-  run: dotnet build 
-- name: run go
-  run: go version
+    - name: setup go 
+      uses: actions/setup-go@v4
+        with:
+          go-version: '1.14'
+          check-latest: true
+      - run: go run hello.go
+      
+    - name: run go
+      run: go version
 # -name: link Railway
 #   run: 
 
