--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,10 +17,10 @@ jobs:
         with:
           go-version: '1.14'
           check-latest: true
-      - run: go run hello.go
-      
-    - name: run go
-      run: go version
+
+    - name: run golang
+       run: go version
+
 # -name: link Railway
 #   run: 
 
