--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,14 +12,14 @@ jobs:
     - name: checkout your source
       uses: actions/checkout@v3
 
-    - name: setup go 
-      uses: actions/setup-go@v4
-        with:
-          go-version: '1.14'
-          check-latest: true
+    # - name: setup go 
+    #   uses: actions/setup-go@v4
+    #     with:
+    #       go-version: '1.14'
+    #       check-latest: true
 
-    - name: run golang
-       run: go version
+    # - name: run golang
+    #    run: go version
 
 # -name: link Railway
 #   run: 
