--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,12 @@ jobs:
     steps:
     - name: checkout your source
       uses: actions/checkout@v3
-
+    - name: cancel norun
+      run: |
+      if [[ $(git log --format=%B -n 1 $GITHUB_SHA) == "#NORUN"* ]]; then
+            echo "Commit message starts with #NORUN, skipping action."
+            exit 1
+          fi
     # - name: setup go 
     #   uses: actions/setup-go@v4
     #     with:
