--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
     - name: cancel norun
       run: |
-      if [[ $(git log --format=%B -n 1 $GITHUB_SHA) == "#NORUN"* ]]; then
+        if [[ $(git log --format=%B -n 1 ${{ github.sha }}) == "#NORUN"* ]]; then
             echo "Commit message starts with #NORUN, skipping action."
             exit 1
           fi
