--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,52 @@ jobs:
     steps:
     - name: checkout your source
       uses: actions/checkout@v3
+    - name: Send payload to Slack workflow
+      id: slack
+      uses: slackapi/slack-github-action@v1.23.0
+      with:
+        # This data can be any valid JSON from a previous step in the GitHub Action
+        payload: |
+          {
+            "blocks": [
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "*DipSA 56 CI/CD Submission*"
+                }
+              },
+              {
+                "type": "section",
+                "fields": [
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Name:* LIU JIAYI"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Email:* e1112897@u.nus.edu"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Metriculation:* E1112897"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Repository:*\n "
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": ${{vars.RAILWAY_URL}}
+                  }
+                ]
+              }
+            ]
+      env:
+        SLACK_WEBHOOK_URL: https://hooks.slack.com/services/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
+
+
+
     # - name: cancel norun
     #   run: |
     #     if [[ $(git log --format=%B -n 1 ${{ github.sha }}) == "#NORUN"* ]]; then
