--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
       uses: bervProject/railway-deploy@main
       with:
         railway_token: ${{secrets.RAILWAY_TOKEN}}
-        service: smelly-scarecrow
+        service: "smelly-scarecrow"
     # - name: Send payload to Slack workflow
     #   id: slack
     #   uses: slackapi/slack-github-action@v1.23.0
