--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,10 +13,13 @@ jobs:
     - name: checkout your source
       uses: actions/checkout@v3
     - name: deploy railway  
-      uses: bervProject/railway-deploy@main
-      with:
-        railway_token: ${{secrets.RAILWAY_TOKEN}}
-        service: "smelly-scarecrow"
+    uses: bervProject/railway-deploy@main
+    env:
+      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+    with:
+      service: "smelly-scarecrow"
+
+
     # - name: Send payload to Slack workflow
     #   id: slack
     #   uses: slackapi/slack-github-action@v1.23.0
