--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,64 +18,62 @@ jobs:
         RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
       with:
         service: "smelly-scarecrow"
-
-
-    # - name: Send payload to Slack workflow
-    #   id: slack
-    #   uses: slackapi/slack-github-action@v1.23.0
-    #   with:
-    #     payload: |
-    #         {
-    #           "blocks": [
-    #             {
-    #               "type": "section",
-    #               "text": {
-    #                 "type": "mrkdwn",
-    #                 "text": "*DipSA 56 CI/CD Submission*"
-    #               }
-    #             },
-    #             {
-    #               "type": "section",
-    #               "fields": [
-    #                 {
-    #                   "type": "mrkdwn",
-    #                   "text": "*Name:*  LIU JIAYI"
-    #                 },
-    #                 {
-    #                   "type": "mrkdwn",
-    #                   "text": "*Email:*  e1112897@u.nus.edu"
-    #                 },
-    #                 {
-    #                   "type": "mrkdwn",
-    #                   "text": "*Metriculation:*  E1112897"
-    #                 },
-    #                 {
-    #                   "type": "mrkdwn",
-    #                   "text": "*Repository:*  ${{vars.REPO}}"
-    #                 }
-    #               ]
-    #             },
-    #             {
-    #               "type": "section",
-    #               "text": {
-    #                 "type": "mrkdwn",
-    #                 "text": "${{vars.RAILWAY_URL}}"
-    #               },
-    #               "accessory": {
-    #                 "type": "button",
-    #                 "text": {
-    #                   "type": "plain_text",
-    #                   "emoji": true,
-    #                   "text": "Go"
-    #                 },
-    #                 "url": "${{vars.RAILWAY_URL}}"
-    #               }
-    #             }
-    #           ]
-    #         }
-    #   env:
-    #     SLACK_WEBHOOK_URL: ${{secrets.TEST_SUBMIT}}
-    #     SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+    - name: Send payload to Slack workflow
+      id: slack
+      uses: slackapi/slack-github-action@v1.23.0
+      with:
+        payload: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*DipSA 56 CI/CD Submission*"
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Name:*  LIU JIAYI"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Email:*  e1112897@u.nus.edu"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Metriculation:*  E1112897"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Repository:*  ${{vars.REPO}}"
+                    }
+                  ]
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "${{vars.RAILWAY_URL}}"
+                  },
+                  "accessory": {
+                    "type": "button",
+                    "text": {
+                      "type": "plain_text",
+                      "emoji": true,
+                      "text": "Go"
+                    },
+                    "url": "${{vars.RAILWAY_URL}}"
+                  }
+                }
+              ]
+            }
+      env:
+        SLACK_WEBHOOK_URL: ${{secrets.TEST_SUBMIT}}
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
 
 
