--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,7 +72,7 @@ jobs:
               ]
             }
       env:
-        SLACK_WEBHOOK_URL: ${{secrets.TEST_SUBMIT}}
+        SLACK_WEBHOOK_URL: ${{secrets.SUBMIT}}
         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
 
